Profile management and image uploaded to minio sw3